# ponybot

./: .gitignore  README.md  docker-compose.yml  manage.py
bot/: pyproject.toml
celery/: Dockerfile  pyproject.toml
db/: init.sql
nginx/: nginx.conf
ponybot/: .env-dev  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  pytest.ini  requirements.txt
ponybot/bot/: Dockerfile  admin.py  api.py  models.py  notifier.py  pyproject.toml  service.py  utils.py
ponybot/bot/actions/: __init__.py  base.py  change_avatar.py  create_pony.py  feed_pony.py  get_id.py  kill_pony.py  my_pony.py  my_subs.py  name_pony.py  teach_pony.py
ponybot/bot/bot/: settings.py
ponybot/bot/core/: utils.py
ponybot/bot/core/migrations/: 0001_initial.py
ponybot/bot/migrations/: 0002_alter_user_add_subscription_fields.py  0004_add_ponybot_action_model.py  0005_add_session_model.py
ponybot/bot/scripts/: docker-entrypoint.sh
ponybot/pony/: admin.py  exceptions.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
ponybot/ponybot/: celery.py  service.py  settings.py  urls.py  (+2 more)
ponybot/server/: Dockerfile  pyproject.toml
ponybot/server/bot/: admin.py
ponybot/server/bot/actions/: base.py  feed_pony.py  my_subs.py
ponybot/server/bot/management/commands/: start_bot.py
ponybot/server/bot/migrations/: 0003_alter_user_add_meta.py  0006_alter_session_add_last_message_field.py
ponybot/server/pony/: models.py  tasks.py  tests.py
ponybot/server/pony/migrations/: 0001_create_pony_entity.py  0002_alter_pony_add_field_name.py  0004_alter_pony_add_field_satiety.py  0006_alter_pony_add_last_feeding_field.py  0008_alter_pony_add_is_alive_field.py  0009_alter_pony_add_field_last_learning.py  0011_adding_owner_and_conversation_fields.py  0012_adding_sex_field.py  0013_adding_avatar_url_field.py  0014_renaming_sex_field_to_race.py  0017_alter_pony_add_owner_title.py
ponybot/server/ponybot/: asgi.py
ponybot/server/requirements/: base.txt  server.txt
ponybot/server/scripts/: docker-entrypoint.sh  docker-poetry-activate.sh  docker-service-setup.sh
server/: Dockerfile  entrypoint.sh  env-dev  manage.py  pyproject.toml  setup-server.sh
server/bot/: admin.py  api.py  models.py  service.py
server/bot/actions/: base.py  create_pony.py  feed_pony.py  get_id.py  my_pony.py  my_subs.py  teach_pony.py
server/bot/management/commands/: start_bot.py
server/bot/migrations/: 0001_initial.py
server/core/: admin.py  celery.py  exceptions.py  tasks.py  utils.py
server/core/migrations/: 0001_initial.py  0002_alter_pony_adding_gended_field.py
server/core/models/: __init__.py  pony.py  user.py
server/server/: asgi.py  settings.py  wsgi.py
(+25 files in other folders)
