[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Bot for Ponybot project"
authors = ["The <at.thealchemist@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
vk = "^2.0.2"
vk-api = "^11.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
