[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Bot service for PONYBOT project - all bot logic and interaction with user is placed here"
authors = ["Alexey Konev <at.thealchemist@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Django
Django = "^3.2.5"
django-constance = "^2.8.0"
django-configurations = "^2.2"
django-picklefield = "^3.0.1"
# PostgreSQL
psycopg2-binary = "^2.9.1"
# VK API
vk = "^2.0.2"
vk-api = "^11.9.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
