[tool.poetry]
name = "server"
version = "0.1.0"
description = "PONYBOT server service - all game logic and periodic tasks are placed here"
authors = ["The <at.thealchemist@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Server
gunicorn = "^20.0.4"
uvicorn = "^0.14.0"
# Django
Django = "^3.2.5"
django-constance = "^2.8.0"
django-configurations = "^2.2"
django-celery-beat = "^2.2.1"
django-picklefield = "^3.0.1"
# Celery
celery = "^5.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
